# drum-synth

./: CMakeLists.txt  CustomControls.cpp  CustomControls.h  DrumModel.h  FmClapModel.cpp  FmClapModel.h  FmCowbellModel.cpp  FmCowbellModel.h  FmCymbalModel.cpp  FmCymbalModel.h  FmKickModel.cpp  FmKickModel.h  FmRimshotModel.cpp  FmRimshotModel.h  FmSnareModel.cpp  FmSnareModel.h  FmTomModel.cpp  FmTomModel.h  HiHatClosedModel.cpp  HiHatClosedModel.h  README.md  TRXBassDrum.cpp  TRXBassDrum.h  TRXClaves.cpp  TRXClaves.h  TRXHiHat.cpp  TRXHiHat.h  TRXSnareDrum.cpp  TRXSnareDrum.h  glad.c  glad.h  main.cpp
.github/workflows/: release-macos.yml  release-windows.yml  windows-static.yml
mi/: dsp.h  operator.h  resources.cc  resources.h  rsqrt.h  sine_oscillator.h  stmlib.h
resources/: README.md  drum_params.txt
